--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo_colored.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="logo3.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.2" />
     <title>OASIS</title>
   </head>
   <body>
